--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,7 @@ main{
     border-radius: 50%;
     background-color: var(--light-color);
 }
+
 /* =============== MENU  =====================*/
 header nav{
     position: absolute;
@@ -164,6 +165,15 @@ header nav.open .menu-close::before{
     border-radius: 7px;
     font-weight: 700;
     transition: all 0.3s;
+}
+.btn.nofill{
+    background-color: transparent;
+    border: 2px solid var(--main-color);
+    color: var(--main-color)
+}
+.btn.nofill:hover{
+    background-color: var(--main-color);
+    color: #fff;
 }
 .btn:hover{
     background-color: var(--light-color);
@@ -338,7 +348,7 @@ header nav.open .menu-close::before{
 .quiz__item ul{
     width: 100%;
     display: flex;
-    justify-content: space-between;.
+    justify-content: space-between;
 }
 .quiz__item li {
     display: inline-block;
@@ -348,8 +358,127 @@ header nav.open .menu-close::before{
     text-align: center;
     cursor: pointer;
 }
+.osdi a[data-result]{
+    display: none;
+}
+.quiz__result {
+    /* display: none; */
+}
+
+
 
 /* =====================END HERO HOME ==============*/
+
+/* ===================== RESULT ====================*/
+.result{
+    display: none;
+}
+.result__wrapper{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.result__title{
+    font-size: 32px;
+    font-weight: 600;
+    color: var(--main-color);
+    margin-bottom: 14px;
+}
+.result__title span{
+    font-size: 40px;
+    color: var(--red-color);
+}
+
+.result__line{
+    position: relative;
+    width: 100%;
+    height: 35px;
+    background: linear-gradient(90deg, rgba(0,173,238,1) 0%, rgba(0,160,228,1) 15%, rgba(3,78,161,1) 15%, rgba(20,85,157,1) 30%, rgba(128,128,128,1) 30%, rgba(128,128,128,1) 50%, rgba(209,56,56,1) 50%, rgba(238,31,31,1) 100%);
+    border-radius: 7px;
+    margin-top: 40px;
+    z-index: 1;
+}
+.result__line--ratio{
+    position: absolute;
+    height: 100%;
+    background-color: rgba(255, 255, 255, 0.5);
+    backdrop-filter: blur(4px);
+    border-radius: 7px;
+    z-index: 2;
+}
+.result__line--ratio img{
+    position: absolute;
+    right: -9px;
+    top: -22px;
+
+}
+.result__markers{
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    width: 100%;
+    margin-left: 3px;
+
+}
+.result__markers p {
+    margin-top: 0;
+    margin-bottom: 40px;
+    padding-left: 4px;
+}
+.result__markers p:nth-child(1){
+    border-left: 2px solid var(--light-color);
+    color: var(--light-color);
+    width: 15%;
+}
+.result__markers p:nth-child(2){
+    border-left: 2px solid var(--main-color);
+    color: var(--main-color);
+    width: 15%;
+}
+.result__markers p:nth-child(3){
+    border-left: 2px solid var(--grey-color);
+    color: var(--grey-color);
+    width: 20%;
+}
+.result__markers p:nth-child(4){
+    border-left: 2px solid var(--red-color);
+    color: var(--red-color);
+}
+.result__info{
+    width: 55%;
+}
+.result__info p{
+    color: var(--grey-color);
+}
+.result__info--rec{
+    font-size: 24px;
+    margin: 48px 0 38px;
+    color: var(--main-color);
+}
+.result__info--rectext{
+    font-size: 24px;
+    font-weight: 600;
+    color: var(--main-color);
+}
+.result__img{
+    width: 40%;
+}
+.result__img img{
+    width: 100%;
+}
+.result__btns{
+    margin: 44px 0 38px;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    gap: 8px;
+}
+.result__btns a{
+    font-size: 16px;
+    text-transform: none;
+}
+/* ==================== END RESULT =================*/
+
 /* ==================== FOOTER ==================*/
 .footer{
     padding: 40px 0;
