--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -358,7 +358,7 @@ header nav.open .menu-close::before{
     text-align: center;
     cursor: pointer;
 }
-.osdi a[data-result]{
+.osdi a.add-result{
     display: none;
 }
 .quiz__result {
@@ -374,9 +374,30 @@ header nav.open .menu-close::before{
     display: none;
 }
 .result__wrapper{
-    display: flex;
+    display: none;
     justify-content: space-between;
     align-items: center;
+}
+.result__wrapper[data-result=""] .result__diagnosis{
+    font-size: 24px;
+    color: var(--light-color);
+    font-weight: 500;
+}
+.result__wrapper[data-result="ocurtears-gidro"] .result__diagnosis{
+    font-size: 24px;
+    color: var(--main-color);
+    font-weight: 500;
+}
+.result__wrapper[data-result="ocurtears-alo"] .result__diagnosis, 
+.result__wrapper[data-result="kationorm"] .result__diagnosis{
+    font-size: 24px;
+    color: var(--grey-color);
+    font-weight: 500;
+}
+.result__wrapper[data-result="kationorm-unidoz"] .result__diagnosis{
+    font-size: 24px;
+    color: var(--red-color);
+    font-weight: 500;
 }
 .result__title{
     font-size: 32px;
@@ -461,10 +482,29 @@ header nav.open .menu-close::before{
     color: var(--main-color);
 }
 .result__img{
+    position: relative;
     width: 40%;
+    aspect-ratio: 1 / 1;
+    border-radius: 50%;
+    overflow: hidden;
+    margin-left: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.result__img::after{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: radial-gradient(circle, rgba(0,173,238,0) 50%, rgba(20,85,157,1) 100%);
 }
 .result__img img{
     width: 100%;
+    height: 100%;
+    object-fit: contain;
 }
 .result__btns{
     margin: 44px 0 38px;
