--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,13 +20,18 @@
     box-sizing: border-box;
 }
 html, body{
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
     height: 100%;
     font-family: 'Roboto Condensed', sans-serif;
-    overflow-x: hidden;
     font-size: 20px;
     font-weight: 400;
+}
+body{
+    position: relative;
+    max-width: 100vw;
+    overflow-x: hidden;
 }
 h1,h2,h3,h4,h5,h6{
     margin: 0;
@@ -63,6 +68,9 @@ img{
     object-fit: cover;
 }
 .wrapper{
+    overflow: hidden;
+    width: 100%;
+    position: relative;
     min-height: 100%;
     display: flex;
     flex-direction: column;
@@ -86,13 +94,21 @@ main{
 }
 
 /* =============== MENU  =====================*/
+header{
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 999;
+    background-color: #fff;
+}
 header nav{
     position: absolute;
+    visibility: hidden;
     top: 0;
     right: -480px;
     max-width: 480px;
     width: 100%;
-    height: 100%;
     background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(4px);
     padding: 80px 40px;
@@ -101,9 +117,9 @@ header nav{
     z-index: 999;
 }
 
-header nav.open{
-    right: 0;
-
+header.open nav{
+    transform: translateX(-100%);
+    visibility: visible;
 }
 header nav ul {
     position: relative;
@@ -157,12 +173,12 @@ header nav li:not(:nth-child(1)){
     transition-delay: 0.5s;
     transition-property: transform;
 }
-header nav.open .menu-close::after{
+header.open nav .menu-close::after{
     transform: translate(-50%, -50%) rotate(45deg);
     transition-delay: 0.5s;
     transition-property: transform;
 }
-header nav.open .menu-close::before{
+header.open nav .menu-close::before{
     transform: translate(-50%, -50%) rotate(-45deg);
     transition-delay: 0.5s;
     transition-property: transform;
@@ -188,13 +204,13 @@ header nav.open .menu-close::before{
     background-color: var(--main-color);
     color: #fff;
 }
-.btn:hover{
+.btn:hover, .btn:active{
     background-color: var(--light-color);
 }
 .btn.btn-light{
     background-color: var(--light-color);
 }
-.btn.btn-light:hover{
+.btn.btn-light:hover, .btn.btn-light:active{
     background-color: var(--main-color);
 }
 .header{
@@ -260,7 +276,7 @@ header nav.open .menu-close::before{
     left: 0;
     display: flex;
     gap: 10px;
-    z-index: 999;
+    z-index: 998;
 }
 .hero-home__slider .slider__btn{
     width: 40px;
@@ -736,6 +752,12 @@ header nav.open .menu-close::before{
     font-weight: 700;
     text-transform: uppercase;
     color: rgba(0, 0, 0, 0.3);
+}
+.footer__top.accent{
+    font-size: 32px;
+    color: var(--main-color);
+    text-transform: none;
+    margin-bottom: 28px;
 }
 .footer__wrapper{
     position: relative;
