--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,9 @@
     --grey-color: #808080;
     --gr-color: linear-gradient(90deg, rgba(3,78,161,1) 0%, rgba(0,173,238,1) 70%);
     --gr-light-color: linear-gradient(90deg, rgba(3,78,161,0) 0%, rgba(3,78,162,0.4) 60%);
+    --fs32: clamp(1.5rem, calc(1.34rem + 0.81vw), 2rem);
+    --fs24: clamp(1.25rem, calc(1.17rem + 0.38vw), 1.5rem);
+    --fs20: clamp(1rem, calc(0.92rem + 0.41vw), 1.25rem);
 }
 
 *{
@@ -25,12 +28,12 @@ html, body{
     padding: 0;
     height: 100%;
     font-family: 'Roboto Condensed', sans-serif;
-    font-size: 20px;
     font-weight: 400;
 }
 body{
     position: relative;
     max-width: 100vw;
+    font-size: var(--fs20);
     overflow-x: hidden;
 }
 h1,h2,h3,h4,h5,h6{
@@ -190,6 +193,7 @@ header.open nav .menu-close::before{
     min-height: 42px;
     text-transform: uppercase;
     background-color: var(--main-color);
+    font-size: var(--fs20);
     color: #fff;
     border-radius: 7px;
     font-weight: 700;
@@ -250,7 +254,19 @@ header.open nav .menu-close::before{
     background-size: contain;
     background-repeat: no-repeat;
 }
+@media (max-width:680px){
+    .header__wrapper a small{
+        display: none;
+    }
+}
+@media (max-width:480px) {
+    header nav{
+        max-width: 100%;
+        right: -100%;
+        padding: 80px 20px 40px 20px;
+    }
 
+}
 /*====================== HERO HOME ================*/
 
 .hero{
@@ -259,7 +275,7 @@ header.open nav .menu-close::before{
 }
 .hero-home{
     /* height: 700px; */
-    padding: 80px 0;
+    padding: clamp(0.63rem, calc(-0.72rem + 6.73vw), 5rem) 0;
 }
 .hero-osdi{
     /* max-height: 700px; */
@@ -297,11 +313,12 @@ header.open nav .menu-close::before{
     position: relative;
     width: 100%;
     color: #fff;
-    padding: 40px 10% 80px 0;
+    padding: 40px clamp(0.63rem, calc(-1.2rem + 9.13vw), 6.25rem) 80px 0;
     display: flex;
     justify-content: space-between;
     align-items: center;    
 }
+
 .hero__wrapper::after{
     position: absolute;
     content: '';
@@ -323,7 +340,7 @@ header.open nav .menu-close::before{
     justify-content: center;
     align-items: start;
     text-align: center;
-    gap: 40px;
+    gap: clamp(1rem, calc(0.41rem + 2.93vw), 2.5rem);
     z-index: 1;
 }
 .hero__annex--item{
@@ -335,7 +352,7 @@ header.open nav .menu-close::before{
     gap: 10px;
 }
 .hero__annex--item img{
-    max-width: 70px;
+    max-width: clamp(2.5rem, calc(1.92rem + 2.88vw), 4.38rem);
     aspect-ratio: 1 / 1;
     object-fit: contain;
 }
@@ -343,19 +360,22 @@ header.open nav .menu-close::before{
     position: relative;
     z-index: 2;
 }
+.hero-home__img img{
+    width: clamp(7.5rem, calc(4.01rem + 17.44vw), 16.44rem);
+}
 .hero-home__offer p{
     max-width: 390px;
     margin-bottom: 38px;
 }
 .hero-home__offer--title {
-    font-size: 64px;
+    font-size: clamp(2rem, calc(1.35rem + 3.25vw), 4rem);
     font-weight: 900;
     text-transform: uppercase;
     line-height: 64px;
     margin: 8px 0;
 }
 .hero-home__offer--subtitle{
-    font-size: 32px;
+    font-size: var(--fs32);
     font-weight: 200;
     text-transform: uppercase;
 }
@@ -369,12 +389,12 @@ header.open nav .menu-close::before{
     max-width: 760px;
 }
 .hero-osdi__offer--toptext{
-    font-size: 24px;
+    font-size: var(--fs24);
     font-weight: 700;
     margin-bottom: 64px;
 }
 .hero-osdi__offer--title{
-    font-size: 40px;
+    font-size: clamp(1.75rem, calc(1.52rem + 1.15vw), 2.5rem);
     font-weight: 700;
     margin-bottom: 6px;
 }
@@ -401,7 +421,102 @@ header.open nav .menu-close::before{
     filter: blur(8px);
     z-index: 10;
 }
+@media(max-width: 1024px){
+    .hero__annex{
+        transform: translateX(0);
+        left: auto;
+        right: 0;
+    }
+    .hero__annex--item{
+        max-width: 220px;
+    }
+}
+@media(max-width: 862px){
+    .hero__annex{
+        position: relative;
+        right: auto;
+    }
+    .hero__wrapper{
+        flex-direction: column;
+        align-items: center;
+        padding-right: 0;
+    }
+    .hero-home__slider .slider__btns{
+        bottom: 0;
+        width: 100%;
+        justify-content: space-around;
+    }
+    .hero-home__slider .slider__btn.slider__next{
+        /* background-color: var(--main-color); */
+    }
+    .hero__offer{
+        display: flex;
+        flex-direction: column;
+    }
+    .hero__offer .btn{
+        /* position: absolute;
+        bottom: 0; */
+        order: 1;
+        text-align: center;
+        margin-bottom: 20px;
+    }
+    .hero-home__offer--subtitle{
+        order: 2;
+    }
+    .hero-home__offer--title{
+        order: 3;
+    }
+    .hero-home__offer p{
+        order: 4;
+    }
+}
+@media(max-width: 738px){
+    .hero-home__img img{
+        width: 280px;
+    }
+    .hero__annex{
+        flex-direction: column;
+    }
+    .hero__annex--item{
+        flex-direction: row;
+        max-width: 100%;
+        text-align: left;
+    }
+    .hero-home__slider .slider__btns{
+        display: none;
+    }
+    .hero__offer .btn{
+        /* border: 1px solid var(--main-color); */
+        background: linear-gradient(90deg, rgba(0,173,238,1) 0%, rgba(20,85,157,1) 100%);
+        transition: all 0.3s;
+        opacity: 1;
+    }
+    .hero__offer .btn:hover{
+        opacity: 0.9;
 
+    }
+    .header a[data-test]{
+        /* display: none; */
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        top: 120px;
+        width: 300px;
+    }
+}
+@media(max-width: 680px){
+    .header a[data-test]{
+        top: 100px;
+        width: 300px;
+    }
+    .hero-home{
+        padding-top: 40px;
+    }
+    .hero-osdi__img, .hero-osdi__img--wrapper, .hero-osdi__img--wrapper img{
+        max-width: 100%;
+        aspect-ratio: 1 / 1;
+    }
+}
 /* ================================= CARE ====================================== */
 .care{
     padding: 58px 0;
@@ -442,6 +557,7 @@ header.open nav .menu-close::before{
 .care__slide{
     display: flex;
     justify-content: space-between;
+    align-items: center;
     gap: 40px;
     color: var(--main-color);
 }
@@ -465,7 +581,8 @@ header.open nav .menu-close::before{
 .care__slide--img{
     position: relative;
     padding: 40px;
-    max-width: 400px;
+    width:  clamp(10rem, calc(5.38rem + 23.08vw), 25rem);
+    height:  clamp(10rem, calc(5.38rem + 23.08vw), 25rem);
     border-radius: 50%;
     aspect-ratio: 1 / 1;
     z-index: 1;
@@ -518,7 +635,57 @@ header.open nav .menu-close::before{
 .care__next{
     right: 0;
 }
+@media(max-width: 862px){
+    .care__nav{
+        width: 100%;
+    }
+    .care__slide{
+        flex-direction: column-reverse;
+    }
+    .care__slider--wrapper::after{
+        width: 1200px;
+        left: 50%;
+        top: auto;
+        transform: translate(-50%, -1628px);
+    }
+    .care__slide--img{
+        width: 70%;
+        height: 70%;
+    }
+}
+@media(max-width: 658px){
+    .care__nav{
+        padding: 0;
+    }
+    .care__btn{
+        display: none;
+    }
+    .care__nav ul{
+        gap: clamp(0.25rem, calc(-0.22rem + 2.37vw), 0.75rem);
+    }
+    .care__nav ul li{
+        width: clamp(0.63rem, calc(0.03rem + 2.96vw), 1.25rem);
+        height: clamp(0.63rem, calc(0.03rem + 2.96vw), 1.25rem);
+    }
+    .care__slider--wrapper{
+        margin-top: clamp(0.5rem, calc(-1.04rem + 7.69vw), 2.13rem);
+    }
+    .care__slider--wrapper::after{
+        transform: translate(-50%, -1528px);
+    }
+    .care__slide--text, .care__slide--img{
+        width: 100%;
+    }
 
+}
+@media(max-width: 486px){
+    .care__slider--wrapper::after{
+        transform: translate(-50%, -1546px);
+    }
+    .care__slider--wrapper{
+        padding: 20px;
+    }
+}
 /* =================================  OSDI ===================================== */
 .osdi__paginations, .osdi__paginations--bullets{
     display: flex;
@@ -538,7 +705,7 @@ header.open nav .menu-close::before{
     background-color: var(--light-color);
 }
 .quiz{
-    padding: 44px 0;
+    padding: clamp(1.75rem, calc(1.44rem + 1.54vw), 2.75rem) 0;
 }
 .quiz__item{
     opacity: 0;
@@ -551,7 +718,7 @@ header.open nav .menu-close::before{
     overflow: visible;
 }
 .quiz__title{
-    font-size: 32px;
+    font-size: var(--fs32);
     font-weight: 600;
     color: var(--main-color);
     margin-bottom: 28px;
@@ -574,7 +741,7 @@ header.open nav .menu-close::before{
 .quiz__item li {
     display: inline-block;
     width: 19%;
-    font-size: 20px;
+    font-size: clamp(1rem, calc(-0.87rem + 2.5vw), 1.25rem);
     text-transform: none;
     text-align: center;
     cursor: pointer;
@@ -585,7 +752,17 @@ header.open nav .menu-close::before{
 .quiz__result {
     /* display: none; */
 }
-
+@media (max-width:1060px) {
+    .quiz__item ul{
+        flex-direction: column;
+        gap: 12px;
+    }
+    .quiz__item li{
+        font-size: 20px;
+        max-width: 400px;
+        width: 100%;
+    }
+}
 
 
 /* =====================END HERO HOME ==============*/
@@ -621,7 +798,7 @@ header.open nav .menu-close::before{
     font-weight: 500;
 }
 .result__title{
-    font-size: 32px;
+    font-size: var(--fs32);
     font-weight: 600;
     color: var(--main-color);
     margin-bottom: 14px;
@@ -738,6 +915,14 @@ header.open nav .menu-close::before{
     font-size: 16px;
     text-transform: none;
 }
+@media (max-width:480px) {
+    .result__markers{
+        display: none;
+    }
+    .result__line{
+        margin-bottom: 20px;
+    }
+}
 /* ==================== END RESULT =================*/
 
 /* ==================== FOOTER ==================*/
@@ -748,13 +933,13 @@ header.open nav .menu-close::before{
 }
 .footer__top{
     text-align: center;
-    font-size: 40px;
+    font-size: clamp(1.75rem, calc(1.52rem + 1.15vw), 2.5rem);
     font-weight: 700;
     text-transform: uppercase;
     color: rgba(0, 0, 0, 0.3);
 }
 .footer__top.accent{
-    font-size: 32px;
+    font-size: clamp(1.5rem, calc(1.35rem + 0.77vw), 2rem);
     color: var(--main-color);
     text-transform: none;
     margin-bottom: 28px;
@@ -772,4 +957,13 @@ header.open nav .menu-close::before{
     bottom: 0;
     left: 50%;
     transform: translateX(-50%);
+}
+@media(max-width: 680px){
+    .footer__wrapper{
+        flex-direction: column;
+    }
+    .footer__wrapper a>img{
+        position: relative;
+        margin: 20px 0;
+    }
 }
