--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,7 @@
     --red-color: #EE1F1F;
     --grey-color: #808080;
     --gr-color: linear-gradient(90deg, rgba(3,78,161,1) 0%, rgba(0,173,238,1) 70%);
+    --bg-inv-color: linear-gradient(90deg, rgba(0,173,238,1) 0%, rgba(3,78,161,1) 100%);
     --gr-light-color: linear-gradient(90deg, rgba(3,78,161,0) 0%, rgba(3,78,162,0.4) 60%);
     --fs32: clamp(1.5rem, calc(1.34rem + 0.81vw), 2rem);
     --fs24: clamp(1.25rem, calc(1.17rem + 0.38vw), 1.5rem);
@@ -507,8 +508,24 @@ header.open nav .menu-close::before{
 @media(max-width: 680px){
     .header a[data-test]{
         top: 86px;
-        width: 300px;
+        width: calc(95% - 6px);
+        z-index: 2;
+        background: var(--bg-inv-color);  
+        text-align: center;      
     }
+    /* .header a[data-test]::after{
+        position: absolute;
+        content: '';
+        top: -3px;
+        bottom: -3px;
+        left: -3px;
+        right: -3px;
+        width: 100%;
+        height: 100%;
+        background: var(--gr-color);
+        border-radius: 7px;
+        z-index: -1;
+    } */
     .hero-home{
         padding-top: 40px;
     }
@@ -532,7 +549,7 @@ header.open nav .menu-close::before{
     text-align: center;
     color: var(--main-color);
 }
-.care__slider--wrapper{
+.care__slider{
     position: relative;
     width: 100%;
     padding: 40px;
@@ -542,7 +559,7 @@ header.open nav .menu-close::before{
     overflow: hidden;
     height: max-content;
 }
-.care__slider--wrapper::after{
+.care__slider::after{
     position: absolute;
     content: '';
     width: 100%;
@@ -611,17 +628,20 @@ header.open nav .menu-close::before{
     margin-top: 24px;
     padding: 0 80px;
 }
-.care__nav ul{
+.care__paginations{
     display: flex;
     justify-content: center;
     align-items: center;    
     gap: 12px;
 }
-.care__nav ul li{
+.care__paginations span{
     width: 20px;
     height: 20px;
     border-radius: 50%;
     background-color: var(--grey-color);
+}
+.care__paginations span.swiper-pagination-bullet-active{
+    background-color: var(--light-color);
 }
 .care__btn{
     position: absolute;
@@ -642,7 +662,7 @@ header.open nav .menu-close::before{
     .care__slide{
         flex-direction: column-reverse;
     }
-    .care__slider--wrapper::after{
+    .care__slider::after{
         width: 1200px;
         left: 50%;
         top: auto;
@@ -660,17 +680,17 @@ header.open nav .menu-close::before{
     .care__btn{
         display: none;
     }
-    .care__nav ul{
+    .care__paginations{
         gap: clamp(0.25rem, calc(-0.22rem + 2.37vw), 0.75rem);
     }
-    .care__nav ul li{
+    .care__paginations span{
         width: clamp(0.63rem, calc(0.03rem + 2.96vw), 1.25rem);
         height: clamp(0.63rem, calc(0.03rem + 2.96vw), 1.25rem);
     }
-    .care__slider--wrapper{
+    .care__slider{
         margin-top: clamp(0.5rem, calc(-1.04rem + 7.69vw), 2.13rem);
     }
-    .care__slider--wrapper::after{
+    .care__slider::after{
         transform: translate(-50%, -1528px);
     }
     .care__slide--text, .care__slide--img{
@@ -679,10 +699,10 @@ header.open nav .menu-close::before{
 
 }
 @media(max-width: 486px){
-    .care__slider--wrapper::after{
+    .care__slider::after{
         transform: translate(-50%, -1546px);
     }
-    .care__slider--wrapper{
+    .care__slider{
         padding: 20px;
     }
 }
