--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,6 +71,10 @@ img{
     display: block;
     object-fit: cover;
 }
+.error{
+    color: var(--red-color) !important;
+    font-weight: 600;
+}
 .wrapper{
     overflow: hidden;
     width: 100%;
@@ -98,7 +102,7 @@ main{
 }
 
 /* =============== MENU  =====================*/
-header{
+/* header{
     position: relative;
     top: 0;
     left: 0;
@@ -119,32 +123,8 @@ header nav{
     box-shadow: -2px 2px 5px 2px rgb(0 0 0 / 10%);
     transition: all 0.4s;
     z-index: 999;
-}
-
-header.open nav{
-    transform: translateX(-100%);
-    visibility: visible;
-}
-header nav ul {
-    position: relative;
-    max-width: 400px;
-}
-header nav li{
-    text-transform: uppercase;
-    color: var(--grey-color);
-    padding: 14px 0;
-    transition: all 0.3s;
-}
-header nav li a{
-    display: inline-block;
-    width: 100%;
-}
-header nav li:hover{
-    color: var(--main-color);
-}
-header nav li:not(:nth-child(1)){
-    border-top: 1px solid rgba(0, 0, 0, 0.3);
-}
+} */
+ 
 .menu-close{
     position: absolute;
     top: -60px;
@@ -154,6 +134,7 @@ header nav li:not(:nth-child(1)){
     border-radius: 50%;
     background-color: var(--grey-color);
     cursor: pointer;
+    display: none;
 }
 .menu-close::after, .menu-close::before{
     position: absolute;
@@ -219,16 +200,73 @@ header.open nav .menu-close::before{
     background-color: var(--main-color);
 }
 .header{
-    padding: 10px 0;
+    position: relative;
+    padding: 38px 0 18px;
+    z-index: 999;
 }
 .header__wrapper{
+    position: relative;
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
 }
 .header__wrapper a small{
     color: var(--main-color);
     font-weight: 600;
+}
+.header__title{
+    position: absolute;
+    top: -24px;
+    left: 50%;
+    transform: translateX(-50%);
+    font-size: 48px;
+    color: var(--main-color);
+    text-transform: uppercase;
+ }
+ .header__title span{
+    color: var(--light-color);
+ }
+ .header__nav--lang{
+    float: right;
+ }
+.header__nav--menu ul{
+    display: flex;
+    gap: 40px;
+    margin-top: 55px;
+}
+.header__nav--menu ul a{
+    text-transform: uppercase;
+    font-weight: 600;
+    color: var(--grey-color);
+    transition: all 0.3s;
+}
+.header__nav--menu ul a:hover{
+    color: var(--main-color);
+}
+.header__links{
+    position: absolute;
+    right: 80px;
+    bottom: -43px;
+}
+.header__links ul{
+    display: flex;
+    gap: 28px;
+}
+.header__links a{
+    padding: 12px 16px;
+    background-color: #fff;
+    border-radius: 7px;
+    border: 3px solid var(--light-color);
+    color: var(--main-color);
+    font-size: 16px;
+    font-weight: 700;
+    text-transform: uppercase;
+    transition: all 0.3s;
+}
+.header__links a:hover{
+    background-color: var(--light-color);
+    color: #fff;
+    border: 3px solid #fff;
 }
 .header__menu--btns{
     display: flex;
@@ -254,6 +292,31 @@ header.open nav .menu-close::before{
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+}
+.header__osdi{
+    display: flex;
+    align-items: center;
+    gap: 14px;
+    color: var(--grey-color);
+    font-weight: 600;
+    font-size: 18px;
+}
+.header__osdi a{
+    margin-top: 6px;
+}
+.header__nav--lang a{
+    padding: 8px 12px;
+    border-radius: 7px;
+    background-color: var(--light-color);
+    color: #fff;
+    opacity: 1;
+    transition: all 0.3s;
+}
+.header__nav--lang a:nth-child(2){
+    background-color: var(--main-color);
+}
+.header__nav--lang a:hover{
+    opacity: 0.8;
 }
 @media (max-width:680px){
     .header__wrapper a small{
@@ -332,6 +395,8 @@ header.open nav .menu-close::before{
     background: var(--gr-light-color);
     z-index: 0;
 }
+
+/* 
 .hero__annex{
     position: absolute;
     bottom: 0;
@@ -356,14 +421,49 @@ header.open nav .menu-close::before{
     max-width: clamp(2.5rem, calc(1.92rem + 2.88vw), 4.38rem);
     aspect-ratio: 1 / 1;
     object-fit: contain;
+} */
+.hero__offer{
+    width: 68%;
+    font-size: 24px;
 }
 .hero__offer, .hero__img{
     position: relative;
     z-index: 2;
 }
-.hero-home__img img{
-    width: clamp(7.5rem, calc(4.01rem + 17.44vw), 16.44rem);
+.hero__title{
+    position: relative;
+    font-size: 32px;
+    font-weight: 600;
+    padding-left: 208px;
 }
+.hero__title::before{
+    position: absolute;
+    content: '';
+    background-image: url(../img/icons/logo-white.svg);
+    width: 167px;
+    height: 66px;
+    background-repeat: no-repeat;
+    background-size: contain;
+    left: 0;
+    top: 0;
+}
+.hero__b-title{
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 2;
+    width: 100%;
+    text-align: center;
+    font-size: 32px;
+    font-weight: 600;
+}
+.hero-home__img img{
+    width: clamp(13.75rem, calc(11.44rem + 11.54vw), 21.25rem);
+    border-radius: 50%;
+    border: 7px solid var(--light-color);
+}
+
 .hero-home__offer p{
     max-width: 390px;
     margin-bottom: 38px;
@@ -765,6 +865,52 @@ header.open nav .menu-close::before{
     text-transform: none;
     text-align: center;
     cursor: pointer;
+}
+.quiz__item li.btn:nth-child(1){
+    background-color: var(--red-color);
+    border: 2px solid var(--red-color);
+}
+.quiz__item li.btn:nth-child(2){
+    background-color: #b32655;
+    border: 2px solid #b32655;
+}
+.quiz__item li.btn:nth-child(3){
+    background-color: #7103a1;
+    border: 2px solid #7103a1;
+}
+.quiz__item li.btn:nth-child(4){
+    background-color: var(--main-color);
+    border: 2px solid  var(--main-color);
+}
+.quiz__item li.btn:nth-child(5){
+    background-color: var(--light-color);
+    border: 2px solid var(--light-color);
+}
+.quiz__item li.btn.check{
+    background-color: transparent;
+}
+.quiz__item li.btn.check:nth-child(1){
+    color: var(--red-color);
+    border: 2px solid var(--red-color);
+}
+.quiz__item li.btn.check:nth-child(2){
+    color: #b32655;
+    border: 2px solid #b32655;
+}
+.quiz__item li.btn.check:nth-child(3){
+    color: #7103a1;
+    border: 2px solid #7103a1;
+}
+.quiz__item li.btn.check:nth-child(4){
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+}
+.quiz__item li.btn.check:nth-child(5){
+    color: var(--light-color);
+    border: 2px solid var(--light-color);
+}
+.quiz__item li.btn:hover{
+    opacity: 0.8;
 }
 .osdi a.add-result{
     display: none;
